fix: contrast

--- a/src/root.scss
+++ b/src/root.scss
@@ -6,8 +6,8 @@
   --color-background: #333;
   --color-full: #cc7832;
   --color-light: #eab868;
-  --color-accent: #9876aa;
-  --color-accent-dark: rgb(151 118 171 / 50%);
+  --color-accent: #CCBDD6;
+  --color-accent-dark: #543B5E;
   --anim-duration: 0.35s;
   --anim-easing: cubic-bezier(0.25, 0.87, 0.58, 1);
   --spacer-xs: 0.2rem;
